--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.17.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version> <!-- or the latest version available -->
+		</dependency>
+
 
 		<!--<dependency>
 			<groupId>com.asis</groupId>
@@ -113,14 +119,34 @@
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-	                <artifactId>maven-surefire-plugin</artifactId>
-	                <version>2.22.1</version>
-	                <configuration>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.22.1</version>
+					<configuration>
 						<systemPropertyVariables>
 							<ato_file_location>${ato_file_location}</ato_file_location>
 							<ato_file_name>${ato_file_name}</ato_file_name>
 							<xero_file_location>${xero_file_location}</xero_file_location>
 							<xero_file_name>${xero_file_name}</xero_file_name>
+
+							<userName>${userName}</userName>
+							<password>${password}</password>
+							<securityQuest1>${securityQuest1}</securityQuest1>
+							<securityAns1>${securityAns1}</securityAns1>
+							<securityQuest2>${securityQuest2}</securityQuest2>
+							<securityAns2>${securityAns2}</securityAns2>
+							<securityQuest3>${securityQuest3}</securityQuest3>
+							<securityAns3>${securityAns3}</securityAns3>
+							<fromDate>${fromDate}</fromDate>
+							<toDate>${toDate}</toDate>
+
+							<userName1>${userName1}</userName1>
+							<clientName>${clientName}</clientName>
+							<fromDate>${fromDate}</fromDate>
+							<toDate>${toDate}</toDate>
+							<julyQuarter>${julyQuarter}</julyQuarter>
+							<octQuarter>${octQuarter}</octQuarter>
+							<janQuarter>${janQuarter}</janQuarter>
+							<aprQuarter>${aprQuarter}</aprQuarter>
 						</systemPropertyVariables>
 					</configuration>
 				</plugin>
